--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
+.App{
+  background-color: whitesmoke;
+
+  border-radius: 10px;
+ 
+ display: flex;
+ justify-content: center;
+ align-items: center;
+
+}
+
+.container{
+  background: linear-gradient(to bottom,skyblue,white);
+  width: 600px;
+  padding: 50px;
+  border-radius: 30px;
+  box-shadow: 0 4px 8px 0 black;
+
+}
+
+.header{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header h1{
+  text-decoration:underline;
+  color: blue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header p{
+  color: lightblue;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.total{
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background:linear-gradient(to top,lightblue,whitesmoke);
+  border-radius: 10px;
+  margin: 20px;
+
 }
 
-.App-link {
-  color: #61dafb;
+.total h2{
+  color:blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  display: flex;
+  flex-direction: column;
+  
 }
